# fightinator

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt
src/: CMakeLists.txt  color.c  color.h  command_list.c  command_list.h  main.c  physics.h  ui.c  ui.h  util.c  util.h
test/: CMakeLists.txt  test.c
